1212 終於呈現hit資料了

--- a/example/solr/collection1/conf/velocity/hit.vm
+++ b/example/solr/collection1/conf/velocity/hit.vm
@@ -10,7 +10,8 @@
 
   ## Has a "name" field ?
   #if($doc.getFieldValue('name'))
-    #parse("product_doc.vm")
+    ##parse("product_doc.vm")
+    #parse("richtext_doc.vm")
 
   ## Has a "compName_s" field ?
   #elseif($doc.getFieldValue('compName_s'))
