--- a/example/solr/collection1/conf/velocity/query_form.vm
+++ b/example/solr/collection1/conf/velocity/query_form.vm
@@ -109,6 +109,7 @@
         #else
           <input type="text" id="q" name="q" value="$!esc.html($params.get('q'))"/>
         #end
+        <input type="hidden" name="hl" value="true" />
         <input type="submit" id="querySubmit"/>
         <input type="reset"/>
 
