--- a/example/solr/collection1/conf/velocity/product_doc.vm
+++ b/example/solr/collection1/conf/velocity/product_doc.vm
@@ -3,95 +3,18 @@
  *  assumed to have a field called "name"
  *#
 
-  #set($mlt = $mltResults.get($docId))
-  #set($mltOn = $params.getBool('mlt'))
-
-<span style="clear:both"></span>
-#if($mltOn == true)
-  <img src="#field('cover_url')" style="float:right;width: 200px; height: auto;" />
-#else
-  <a href="#lensNoQ&q=id:$docId&mlt=true"><img src="#field('cover_url')" style="float:right;width: 100px; height: auto;" /></a>
-#end
-
-<div class="result-title"><b>#field('name')</b><span class="mlt">   #if($params.getBool('mlt', false) == false)#end</span></div>
-#*
+<div class="result-title"><b>#field('name')</b><span class="mlt">   #if($params.getBool('mlt', false) == false)<a href="#lensNoQ&q=id:$docId&mlt=true">More Like This</a>#end</span></div>
 ##do we have a physical store for this product
 #set($store = $doc.getFieldValue('store'))
 #if($store)<div class="map"><img src="http://maps.google.com/maps/api/staticmap?&zoom=12&size=150x80&maptype=roadmap&markers=$doc.getFieldValue('store')&sensor=false" /><div><small><a target="_map" href="http://maps.google.com/?q=$store&amp;source=embed">Larger Map</a></small></div></div>#end
- *#
-<!-- 欄位 -->
-
-<!--
 <div>Id: #field('id')</div>
 <div>Price: #field('price_c')</div>
 <div>Features: #field('features')</div>
-<div>Place: #field('place')</div>
 <div>In Stock: #field('inStock')</div>
--->
-<div style="display:none;">Id: #field('id')</div>
-<!-- <div>Title: #field('title')</div> -->
-<div><strong>Author: </strong>
-  #set($comma='')
-  #foreach($au in $doc.getFieldValue('author'))
-    $comma
-    $au
-    #set($comma=',')
-  #end
-</div>
-
-  #if($doc.getFieldValue('translator'))
-  <div><strong>Translator:</strong> #field('translator')</div>
-  #end
-
-  #if($mltOn == true)
-  <div><strong>Publisher:</strong> #field('publisher')</div>
-  #end
-
-  #if($mltOn == true)
-  <div><strong>Place:</strong> #field('place')</div>
-  #end
-
-<div><strong>Publish Year:</strong> #field('publish_year')</div>
-
-  #if($mltOn == true)
-  <div><strong>Page:</strong> #field('page')</div>
-  <div><strong>Thickness:</strong> #field('thickness')</div>
-  <div><strong>ISBN:</strong> #field('isbn')</div>
-  <div><strong>Subject:</strong>
-
-    #set($comma='')
-    #foreach($item in $doc.getFieldValue('subject'))
-      $comma
-      $item
-      #set($comma=',')
-    #end
-  </div>
-  <hr />
-  #foreach($features_item in $doc.getFieldValue('features'))
-    <p>$features_item</p>
-  #end
-  <hr />
-  <div><strong>Table of Contents:</strong></div>
-  <ul>
-  #foreach($toc_item in $doc.getFieldValue('toc'))
-    <li>$toc_item</li>
-  #end
-  </ul>
-  
-
-  #end
-
-#if($mltOn != true)
-  <div><a class="read-more" href="#lensNoQ&q=id:$docId&mlt=true">Read More</a></div>
-#end
-
-<!-- 地圖 -->
-
 <div class="mlt">
-  #if($mltOn == true)
-  #*<div class="field-name">Similar Items</div>*#
-  #end
-  #*
+  #set($mlt = $mltResults.get($docId))
+  #set($mltOn = $params.getBool('mlt'))
+  #if($mltOn == true)<div class="field-name">Similar Items</div>#end
   #if ($mltOn && $mlt && $mlt.size() > 0)
   <ul>
     #foreach($mltHit in $mlt)
@@ -105,6 +28,5 @@
   #elseif($mltOn && $mlt.size() == 0)
     <div>No Similar Items Found</div>
   #end
-  *#
 </div>
 #parse('debug.vm')
