--- a/example/solr/collection1/conf/velocity/header.vm
+++ b/example/solr/collection1/conf/velocity/header.vm
@@ -5,10 +5,12 @@
 <form action="#{url_for_home}" method="GET">
 <div class="ui menu inverted"  style="position: fixed;
 top: 0;
+z-index: 999;
 width: 100%;">
-  <a class="item" style="background-image:url(#{url_root}/img/library-logo-small.png); padding-left: 50px;background-repeat:no-repeat;" href="#url_for_home#if($request.params.get('debugQuery'))?debugQuery=true#end">
+  <div class="header item" 
+    style="background-image:url(#{url_root}/img/library-logo-small.png); padding-left: 50px;background-repeat:no-repeat;" href="#url_for_home#if($request.params.get('debugQuery'))?debugQuery=true#end">
     Apache Solr IR Practice
-  </a>
+  </div>
 
   #set( $selected = ! $queryOpts )
   <a class="item #if($selected)active#end" href="#url_for_home/?#debug#annotate">
