--- a/example/solr/collection1/conf/velocity/pagination_bottom.vm
+++ b/example/solr/collection1/conf/velocity/pagination_bottom.vm
@@ -8,15 +8,24 @@
   ## pass
 #else
 
-  #link_to_previous_page("previous")
+<div class="ui text menu">
+  <div class="ui icon item">
+    <i class="chevron left icon"></i>
+    #link_to_previous_page("previous")
+  </div>
 
-  <span class="results-found">$page.results_found</span>
-  results found.
+  <div class="ui text item">
+    <span class="results-found">$page.results_found</span>
+    results found.
 
-  Page <span class="page-num">$page.current_page_number</span>
-    of <span class="page-count">$page.page_count</span>
-
-  #link_to_next_page("next")
+    Page <span class="page-num">$page.current_page_number</span>
+      of <span class="page-count">$page.page_count</span>
+  </div>
+  <div class="ui icon item">
+    #link_to_next_page("next")
+    <i class="chevron right icon"></i>
+  </div>
+</div>
 
 #end
 <br/>
