--- a/example/solr/collection1/conf/velocity/query_form.vm
+++ b/example/solr/collection1/conf/velocity/query_form.vm
@@ -4,7 +4,7 @@
 #set($queryOpts = $request.params.get("queryOpts"))
 #parse("richtext_fields.vm")
 
-<div class="query-box ui segment center aligned">
+<div class="query-box ui segment basic center aligned">
   <form id="query-form" action="#{url_for_home}" method="GET">
 
     <div class="">
@@ -91,9 +91,11 @@
         #end
 
         <div class="ui buttons">
-            <input type="submit" id="querySubmit" class="ui primary button" />
+            <input type="submit" id="querySubmit" class="ui primary button" value="Search" />
+            <!--
             <div class="or"></div>
-            <input type="reset" class="ui button" />
+            <input type="reset" class="ui button" value="Reset" /> 
+            -->
         </div>
 
         #if($queryOpts == 'advance')
