--- a/example/solr/collection1/conf/velocity/query_form.vm
+++ b/example/solr/collection1/conf/velocity/query_form.vm
@@ -99,7 +99,7 @@
         </div>
 
         #if($queryOpts == 'advance')
-          #if($params.get('q'))
+          #if($params.get('q') && $params.get('q') != "")
             <div>Your search query: $params.get('q')</div>
           #end
         #end          
