--- a/example/solr/collection1/conf/velocity/header.vm
+++ b/example/solr/collection1/conf/velocity/header.vm
@@ -3,7 +3,7 @@
  *#
 
 <form action="#{url_for_home}" method="GET">
-<div class="ui menu inverted"  style="position: fixed;
+<div class="ui basic menu inverted "  style="position: fixed;
 top: 0;
 z-index: 999;
 width: 100%;">
