--- a/example/solr/collection1/conf/velocity/main.css
+++ b/example/solr/collection1/conf/velocity/main.css
@@ -240,3 +240,9 @@ li.show {
 form {
     margin: 0;
 }
+
+.result-document b.hit {
+    background-color: yellow;
+    font-weight: blod;
+    text-decoration: underline;
+} 
