--- a/example/solr/collection1/conf/velocity/query_form.vm
+++ b/example/solr/collection1/conf/velocity/query_form.vm
@@ -2,7 +2,7 @@
  *  Renders the main query form
  *#
 #set($queryOpts = $request.params.get("queryOpts"))
-#parse("richtext_fields.vm")
+#parse("display_fields.vm")
 
 <div class="query-box ui segment basic center aligned">
   <form id="query-form" action="#{url_for_home}" method="GET">
