--- a/example/solr/collection1/conf/velocity/pagination_top.vm
+++ b/example/solr/collection1/conf/velocity/pagination_top.vm
@@ -19,13 +19,18 @@
 
   <span>
     <span class="results-found">$page.results_found</span>
-    results found in
+    results found 
+    (
     ${response.responseHeader.QTime} ms
+    )
   </span>
 
   #if ($page.results_found > 0)
+  <br />
+  <strong>
   Page <span class="page-num">$page.current_page_number</span>
     of <span class="page-count">$page.page_count</span>
+  </strong>
   #end
 
 #end   ## end else non-grouped results, normal pagination
