--- a/example/solr/collection1/conf/velocity/richtext_doc.vm
+++ b/example/solr/collection1/conf/velocity/richtext_doc.vm
@@ -26,105 +26,7 @@
 
 #############################
 
-
-
-#if($mltOn != true)
-<div class="extra">
-            <a class="ui right floated primary button" href="#lensNoQ&q=id:$docId&mlt=true">
-              Read More
-              <i class="right chevron icon"></i>
-            </a>
-          </div>
-#end
-
-#set($fields = $detail_fields)
-#if ($mltOn != true)
-    #set($fields = $result_fields)
-#end
-
-<table class="ui table">
-#foreach ($field in $fields)
-
-    #set($name = $field['name'])
-    #set($label = $field['label'])
-    #set($access_point = $field['access_point'])
-
-
-    #set($ori_array = $doc.getFieldValue($name))
-    #if (!$hitField[$name] && !$doc.getFieldValue($name))
-        #set($value_array = "")
-    #elseif (!$hitField[$name])
-        #set($value_array = $doc.getFieldValue($name))
-    #else
-        #set($value_array = $hitField[$name])
-    #end
-
-    #if ($value_array != "")
-    <tr>
-        #if($label != false)
-            <th class="right aligned"><strong>$label</strong>:</th>
-        #end
-        
-        #if (!$value_array.size())
-            #set ($value_array = [$value_array])
-        #end
-        #if (!$ori_array.size())
-            #set ($ori_array = [$ori_array])
-        #end
-
-        #set( $comma = "" )
-        #set($i = 0)
-
-        #if ($label == false)
-            <td colspan="2">
-        #else
-            <td>
-        #end
-
-        #foreach ($value in $value_array)
-            #set($ori_value = $ori_array[$i])
-                #set($display_value = $value)
-                #if ($label == false)
-                    #set($display_value = "<strong>"+$value+"</strong>")
-                #end
-
-                $comma
-
-                #if($access_point==false)
-                    #if($name == 'title')
-                        <h2 class="ui header">
-                            <i class="book medium icon" style="display:inline-block;padding-top:0;font-size:1em;"></i>
-                            $display_value
-                        </h2>
-                    #else
-                        $display_value
-                    #end
-
-                #else
-                    #if($name == 'title')
-                        #set($access_point = '?q=id:%22'+$docId+'%22&mlt=true')
-                        <i class="book medium icon"></i>
-                        <a href="$access_point" class="ui medium header">
-                            
-                            $display_value
-                        </a>
-                    #else
-                        #set($access_point = '?q='+$name+':%22'+$ori_value+'%22')
-
-                        <a href="$access_point">
-                            $display_value
-                        </a>
-                    #end
-                #end
-            
-            #set( $comma = "," )
-            #set($i = $i+1)
-        #end
-        </td>
-    </tr>
-    #end
-#end
-</table>
+#parse("richtext_fields.vm")
 
 #############################
 
@@ -170,94 +72,17 @@
 ##   #set($filetype = "file")
 ## #end
 
-## Row 1: Icon and Title and mlt link
+## Row 1: Icon and Title and mlt link  
+#if($filetype)
 <div class="result-title">
   ## Icon
   ## Small file type icons from http://www.splitbrain.org/projects/file_icons (public domain)
-  
-  #if($filetype)
     <img src="#{url_root}/img/filetypes/${filetype}.png" align="center">
-  #end
-
 </div>
-
-## Display Similar Documents / MLT = More Like This
-#if($mltOn == true)
-<div class="mlt">
-  #set($mlt = $mltResults.get($docId))
-  #set($mltOn = $params.getBool('mlt'))
-  #if($mltOn == true)
-    <div class="ui segment">
-    <div class="field-name ui ribbon label">
-      Similar Items
-    </div>
-  #end
-  ## If has MLT enabled An Entries to show
-  #if ($mltOn && $mlt && $mlt.size() > 0)
-    <ul>
-      #foreach($mltHit in $mlt)
-        #set($mltId = $mltHit.getFieldValue('id'))
-        <li>
-
-###################
-#foreach ($field in $similar_fields)
-    <div>
-    #set($name = $field['name'])
-    #set($label = $field['label'])
-    #set($access_point = $field['access_point'])
-
-    #set($value_array = $mltHit.getFieldValue($name))
-        #if($label != false)
-            <strong>$label</strong>:
-        #end
-        
-        #if (!$value_array.size())
-            #set ($value_array = [$value_array])
-        #end
-
-        #set( $comma = "" )
-
-        #foreach ($value in $value_array)
-          <span>
-                #set($display_value = $value)
-                #if ($label == false)
-                    #set($display_value = "<strong>"+$value+"</strong>")
-                #end
-
-
-                $comma
-
-                #if($access_point==false)
-                    $display_value
-                #else
-                    #if($name == 'title')
-                        #set($access_point = '?q=id:%22'+$mltId+'%22&mlt=true')
-                    #else
-                        #set($access_point = '?q='+$name+':%22'+$value+'%22')
-                    #end
-                    <a href="$access_point">
-                        $display_value
-                    </a>
-                #end
-            #set( $comma = "," )
-            </span>
-        #end
-
-    </div>
 #end
 
-          ############################################
+#parse("richtext_similar.vm")
 
-        </li>
-      #end    ## end for each mltHit in $mlt
-    </ul>
-  ## Else MLT Enabled but no mlt results for this query
-  #elseif($mltOn && $mlt.size() == 0)
-    
-    <div>No Similar Items Found</div>
-  #end
-</div>  ## div class=mlt
-#end
 #if($mltOn == true)
     </div>
     
