--- a/example/solr/collection1/conf/velocity/query_form.vm
+++ b/example/solr/collection1/conf/velocity/query_form.vm
@@ -86,12 +86,7 @@
         #else
             <div class="ui icon input">
                 <i class="search small icon"></i>
-                #set($q_value = "")
-                #set($q_value = $!esc.html($params.get('q')))
-                #if ($q_value.length > 3 && $q_value.substring(0,3) == "id:")
-                    #set($q_value = "")
-                #end
-                <input type="text" id="q" name="q" value="$q_value"/>
+                <input type="text" id="q" name="q" value="$!esc.html($params.get('q'))"/>
             </div>
         #end
 
